--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://my-mysql-service:3306/sparklmsdb?useSSL=true
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://mahmuda-rds.cr6y2a8fgcbj.us-west-2.rds.amazonaws.com:3306/sparklmsdb?useSSL=true
+spring.datasource.username = keya
+spring.datasource.password = keya1596
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
