--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://mahmuda-rds.cr6y2a8fgcbj.us-west-2.rds.amazonaws.com:3306/sparklmsdb?useSSL=true
+spring.datasource.url = jdbc:mysql://mahmuda-rds.cmukpokoj0mz.us-west-2.rds.amazonaws.com:3306/sparklmsdb?useSSL=true
 spring.datasource.username = keya
 spring.datasource.password = keya1596
 
